@@ -21,7 +21,7 @@ Fix: Back in the dark ages I changed mvars.ene_soldierIDList itself from its ori
 Fix: TppRevenge.SetEnableSoldierLocatorList (actually broken out by IH from _ApplyRevengeToCp) not applying in MB. Don't think it affected anything since it failed in a way that it was still applying revenge for all soliders in a cluster, just that it was applying multiple times (with exact same values).
 See the NOTE: in SetEnableSoldierLocatorList for my puzzlement about it.
 
-Fix: Custom DD female type no longer dependant on Custom DD (male) type being set. Either of them will default to normal DD mb body if setting is OFF. 
+Fix: Custom DD female type no longer dependant on Custom DD (male) type being set. Either of them will default to normal DD mb body if setting is OFF.
 
 Motherbase menu > 'DD Suit', 'DD Suit female' renamed 'Custom DD type in MB' in line with 'Custom Soldier type in mission/free'. 
 The underlying Ivars already were named customSoldierTypeMB_ALL, so you shouln't have to re-set the setting.
@@ -44,6 +44,8 @@ isNoOrderBoxMission, likewise giving explicit setting for NO_ORDER_BOX_MISSION
 API: LoadExternalModule: Don't reload module if prevModule and not isReload.
 This was causing the early InfInit LoadExternalModuled modules Ivars,IvarsPersist and InfSoldierFaceAndBody to be reloaded. 
 In the case of InfSoldierFaceAndBody it would loose all its data since those functions were called manually rather than PostAllModulesLoad.
+
+API: InfUserMarker.GetMarkerPosition return type changed from Vector3 to {x,y,z} as it's more commonly used through other IH functions.
 
 r260 - 2023-03-10
 Fix: quest adding their missionPacks in helispace - thanks CapLag for an unrelated report that made me test something related.
